--- a/Aprendendo/estilo.css
+++ b/Aprendendo/estilo.css
@@ -16,4 +16,10 @@ h2{
 }
 h1{
     color: white;
+    margin: 120px 0px 60px 50px;
+    width: 50%;
+    border: 4px solid red;
+    padding: 160px;
+
 }
+
